# mafia-battle

./: .gitignore  AGENTS.md  GAME_SPECIFICATION.md  LICENSE  README.md  REASONING_SUMMARIES.md  full_mafia_rules.md  main.py  pyproject.toml  requirements.txt  run_analysis.py  simulate_context.py  test_async_voting.py  test_gpt5_mini.py  test_gpt5_mini_detailed.py  test_llm_agent.py  test_llm_outputs.py  viewer.py
analysis/: DUMMY_AGENT_ANALYSIS.md  GPT5_MINI_CONNECTIVITY_TEST.md  LLM_AGENT_ANALYSIS.md  LLM_AGENT_GAME_RESULTS.md  LLM_AGENT_TEST_RESULTS.md  README.md
configs/: README.md  dummy_agent.yaml  mixed_agents.yaml  one_llm_agent.yaml  simple_llm_agent.yaml
scripts/: format_run_script.py  run_20260111_024040.txt
src/: __init__.py
src/agents/: __init__.py  base_agent.py  dummy_agent.py  exceptions.py  llm_agent.py  xml_formatter.py
src/config/: __init__.py  config_loader.py  game_config.py
src/core/: __init__.py  game_engine.py  judge.py  player.py  roles.py
src/phases/: __init__.py  day_phase.py  night_phase.py  voting.py
src/web/: __init__.py  event_emitter.py  game_server.py  run_recorder.py  viewer_server.py
src/web/templates/: game_view.html  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_day_phase.py  test_full_game.py  test_game_engine.py  test_judge.py  test_llm_context_examples.py  test_mafia_always_kills.py  test_night_phase.py  test_voting.py
tests/context_examples/: README.md  day_speech_prompt.txt  don_check_prompt.txt  final_speech_prompt.txt  kill_claim_prompt.txt  kill_decision_prompt.txt  sheriff_check_prompt.txt
