[project]
name = "mafia-battle"
version = "0.1.0"
description = "Text-based Mafia game simulation with LLM agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
  "openai>=1.54.0",
  "anthropic>=0.18.0",
  "pydantic>=2.0.0",
  "typing-extensions>=4.8.0",
  "pyyaml>=6.0.0",
  "pytest>=7.4.0",
  "pytest-mock>=3.12.0",
  "flask>=3.0.0",
  "flask-socketio>=5.3.0",
]

[tool.uv]
no-cache = false
